[Qt][Gtk] Wrong state when pausing a video in the "playing" event handler https://bugs.webkit.org/show_bug.cgi?id=68589

Reviewed by Philippe Normand.

Source/WebCore:

Test: media/video-playing-and-pause.html

As suggested by Alexis Menard on IRC, query gstreamer's state instead of using a cached value
in MediaPlayerGstreamerPrivate::paused().

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::paused):

LayoutTests:

* media/video-playing-and-pause.html: Added.
* media/video-paint-test.js:
* platform/qt/media/video-playing-and-pause-expected.txt: Added.
* platform/qt/media/video-playing-and-pause-expected.png: Added.


Canonical link: https://commits.webkit.org/84641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95799 268f45cc-cd09-0410-ab3c-d52691b4dbfc