LayoutTests/media/video-paint-test.js
@@ -27,3 +27,23 @@ if (window.layoutTestController) {
             layoutTestController.notifyDone();
     } , 8000);
 }
+
+function initAndPause()
+{
+    var totalCount = document.getElementsByTagName('video').length;
+    var count = totalCount;
+    document.addEventListener("canplaythrough", function () {
+        if (!--count) {
+            var video = document.getElementsByTagName('video')[0];
+            video.play();
+            video.addEventListener("playing", function() {
+                video.pause();
+                video.addEventListener("pause", function() {
+                    if (window.layoutTestController)
+                        layoutTestController.notifyDone();
+                });
+            });
+        }
+    }, true);
+}
+
